unpackaged/main/default/objects/Contact/fields/Contact_state__c.field-meta.xml
<CustomField>
    <fullName>Contact_state__c</fullName>
    <label>Contact state</label>
    <length>100</length>
    <type>Text</type>
</CustomField>