unpackaged/main/default/objects/Contact/fields/New_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>New_Contact_Details__c</fullName>
    <label>New_Contact_Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>